# POS-SEM

./: CMakeLists.txt  Download.cpp  Download.h  DownloadDisplayMenu.cpp  DownloadDisplayMenu.h  DownloadManager.cpp  DownloadManager.h  Enums.h  FileManager.cpp  FileManager.h  Menu.cpp  Menu.h  README.md  Settings.cpp  Settings.h  main.cpp  settings.txt
